// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`molecules/LabelledToggle Default play-test 1`] = `
<style>
  :root{
      --animation-rhythm: 1s;
      box-sizing: border-box;
      interpolate-size: allow-keywords;
  }

  @media (prefers-reduced-motion: reduce) {
    :root {
        --animation-rhythm: 0s;
    }
  }
  
  * {
    box-sizing: border-box;
  }
</style>
<div style="font-family: &quot;Inter Variable&quot;, Inter, system-ui, sans-serif;">
  <div class="LabelledToggle_root__DgK3_"
       data-testid="LabelledToggle"
  >
    <span as="span"
          class="BaseLabel_root__XDdQ8"
          data-testid="BaseLabel"
    >
      Toggle entry
    </span>
    <input class="BaseToggle_root__gl1xS"
           data-testid="BaseToggle"
           type="checkbox"
    >
  </div>
</div>
`;

exports[`molecules/LabelledToggle On play-test 1`] = `
<style>
  :root{
      --animation-rhythm: 1s;
      box-sizing: border-box;
      interpolate-size: allow-keywords;
  }

  @media (prefers-reduced-motion: reduce) {
    :root {
        --animation-rhythm: 0s;
    }
  }
  
  * {
    box-sizing: border-box;
  }
</style>
<div style="font-family: &quot;Inter Variable&quot;, Inter, system-ui, sans-serif;">
  <div class="LabelledToggle_root__DgK3_"
       data-testid="LabelledToggle"
  >
    <span as="span"
          class="BaseLabel_root__XDdQ8"
          data-testid="BaseLabel"
    >
      Toggle entry
    </span>
    <input class="BaseToggle_root__gl1xS"
           data-testid="BaseToggle"
           type="checkbox"
           checked
    >
  </div>
</div>
`;
